// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GiffExpertApp /> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GiffExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One Punch"
      key="One Punch"
    />
    <GifGrid
      category="Dragon Ball"
      key="Dragon Ball"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en <GiffExpertApp /> debe mostrarse correctamente 1`] = `
<Fragment>
  <h2>
    GiffExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
